style.css
body {
    background-color: #EEEDEF;
    overflow: hidden;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: lighter;
}

* {
    box-sizing: border-box;
}

.wrapper {
    margin: 10vh auto;
    width: 60%;
    min-height: 550px;
    border: .8rem solid white;
    background-color: white;
    overflow: hidden;
    position: relative;
}

.wrapper .top {
    width: 100%;
    min-height: 350px;
    background: url(media/gear.jpeg);
    background-color: #848484;
    background-size: cover;
    background-position: center;
    overflow: hidden;
    z-index: 1;
    padding: 1rem;
    transition: 0.6s ease-in-out;
    display: flex;
    justify-content: center;
    align-items: center;
}

.wrapper .top .cal {
    padding: 3px;
    border: 2px solid white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    display: none;
}

.active {
    transform: scale(1.05);
    background-blend-mode: multiply;
    transition-duration: .5s;
}

.top img {
    width: 100%;
    height: 100%;
}

.bottom {
    box-sizing: border-box;
    background-color: white;
    position: absolute;
    top: 60%;
    min-height: 250px;
    z-index: 2;
    margin: 0 .5rem;
}

.bottom h3 {
    padding: 1rem;
}

.com-sec {
    display: flex;
    align-items: center;
    font-size: .8rem;
}

.com-sec span {
    display: flex;
    align-items: center;
    margin-right: 1rem;
}

.com-sec span img {
    width: 1rem;
    height: 1rem;
    margin-right: .3rem;
}

.bottom p {
    font-size: .9rem;
    line-height: 25px;
    margin-top: 1rem;
}

#trapezoid {
    border-bottom: 50px solid #F4B53B;
    border-right: 12px solid transparent;
    height: 0;
    width: 60px;
    height: 100%;
}

#trapezoid img {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 12px;
    margin-left: 10px;
}

.button span {
    padding: 0 .3rem;
}

.button {
    transition: .6s ease-in-out;
    cursor: pointer;
    width: 12rem;
    display: flex;
    align-items: center;
    outline: none;
    border: none;
    background-color: white;
    padding: 0;
    height: 50px;
    margin-top: 1.7rem;
    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
    font-weight: normal;
}

.button-active {
    background-color: #F4B53B;
    color: white;
}

